Tried to fix extra padding bug on logo in mobile d evices in production. Tested with local machine, phone and tablet. Worked on phone but ipad giving me a hard time. Pushing to production to see if it works there.

--- a/src/layout2.css
+++ b/src/layout2.css
@@ -234,6 +234,12 @@
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
   .logo {
     max-height: 7vh;
+    width: unset;
+  }
+
+  .logoContainer {
+    width: 100%;
+    justify-content: right;
   }
 
   .linkContainer {
@@ -308,6 +314,12 @@
 @media (max-width: 768px) {
   .logo {
     max-height: 7vh;
+    width: unset;
+  }
+
+  .logoContainer {
+    width: 100%;
+    justify-content: right;
   }
 
   .linkContainer {
